<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_journal_background"
    tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="@dimen/app_name_size" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/general_padding"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/general_padding"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_padding"
                android:padding="@dimen/general_padding"
                android:background="@drawable/rounded_button_transparent"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/reset_password_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:padding="@dimen/general_padding"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_padding"
                android:text="@string/text_view_signup"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />



</RelativeLayout>